diskann-quantization/tests/compile-fail/multi/mat_as_view_mut.stderr
error[E0502]: cannot borrow `mat` as immutable because it is also borrowed as mutable
  --> tests/compile-fail/multi/mat_as_view_mut.rs:14:13
   |
12 |     let view = mat.as_view_mut();
   |                --- mutable borrow occurs here
13 |     // This should fail: we cannot use `mat` while `view` is still alive
14 |     let _ = mat.num_vectors();
   |             ^^^ immutable borrow occurs here
15 |     let _ = view.num_vectors();
   |             ---- mutable borrow later used here
